refactoring. gzip, fileio, http method, tostring